Moved IP address note to Networking folder

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,6 +90,6 @@
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
     "README.md",
-    "IP Addresses.md"
+    "Networking/IP Addresses.md"
   ]
 }
