--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Notekeeping/Tools.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Notekeeping/Tools.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,8 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "Notekeeping/Tools.md",
+    "Notekeeping/Effective Notekeeping.md",
     "README.md",
     "Networking/IP Addresses.md"
   ]
