Moved Flameshot screenshot

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,7 +90,7 @@
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
     "Notekeeping/Tools.md",
-    "Flameshot.png",
+    "Notekeeping/Flameshot.png",
     "Notekeeping/Effective Notekeeping.md",
     "README.md",
     "Networking/IP Addresses.md"
