Changed some formatting

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,14 +90,14 @@
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
     "Networking/IP Addresses.md",
+    "Notekeeping/Effective Notekeeping.md",
+    "Notekeeping/Tools.md",
     "Networking/Subnetting.md",
     "Networking/The OSI Model.md",
     "Networking/Common Ports and Protocols.md",
     "Networking/TCP, UDP, Three-way Handshake.md",
     "Networking/MAC Addresses.md",
     "README.md",
-    "Notekeeping/Tools.md",
-    "Notekeeping/Flameshot.png",
-    "Notekeeping/Effective Notekeeping.md"
+    "Notekeeping/Flameshot.png"
   ]
 }
