--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Networking/The OSI Model.md",
+            "file": "Networking/MAC Addresses.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Networking/The OSI Model.md",
+                "file": "Networking/MAC Addresses.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,10 +89,10 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "Networking/MAC Addresses.md",
     "Networking/The OSI Model.md",
     "Networking/IP Addresses.md",
     "Networking/Common Ports and Protocols.md",
-    "Networking/MAC Addresses.md",
     "Networking/Subnetting.md",
     "Networking/TCP, UDP, Three-way Handshake.md",
     "Notekeeping/Tools.md",
