--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Networking/MAC Addresses.md",
+            "file": "Introduction to Linux/Viewing, Creating and Editing Files.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Networking/MAC Addresses.md",
+                "file": "Introduction to Linux/Viewing, Creating and Editing Files.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "Introduction to Linux/Viewing, Creating and Editing Files.md",
+    "Introduction to Linux/Users and Privileges.md",
+    "Introduction to Linux/Navigating the File System.md",
+    "Introduction to Linux/Common Network Commands.md",
+    "Introduction to Linux/Installing and Updating Tools.md",
+    "Introduction to Linux/Sudo Overview.md",
     "Networking/MAC Addresses.md",
     "Networking/The OSI Model.md",
     "Networking/IP Addresses.md",
-    "Networking/Common Ports and Protocols.md",
-    "Networking/Subnetting.md",
-    "Networking/TCP, UDP, Three-way Handshake.md",
-    "Notekeeping/Tools.md",
-    "README.md",
-    "Notekeeping/Flameshot.png",
-    "Notekeeping/Effective Notekeeping.md"
+    "Networking/Common Ports and Protocols.md"
   ]
 }
