--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Introduction to Linux/Scripting with Bash.md",
+            "file": "Introduction to Python/Strings.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Introduction to Linux/Scripting with Bash.md",
+                "file": "Introduction to Python/Strings.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,7 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "Introduction to Python/Strings.md",
     "Introduction to Linux/Scripting with Bash.md",
     "Introduction to Linux/Viewing, Creating and Editing Files.md",
     "Introduction to Linux/Users and Privileges.md",
@@ -97,7 +98,6 @@
     "Introduction to Linux/Installing and Updating Tools.md",
     "Introduction to Linux/Common Network Commands.md",
     "Networking/MAC Addresses.md",
-    "Networking/The OSI Model.md",
-    "Networking/IP Addresses.md"
+    "Networking/The OSI Model.md"
   ]
 }
