--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Introduction to Python/Strings.md",
+            "file": "README.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Introduction to Python/Strings.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "README.md",
+    "Introduction to Python/Lists.md",
+    "Introduction to Python/Conditional Statements.md",
+    "Introduction to Python/Relational and Boolean Operators.md",
+    "Introduction to Python/Boolean Expressions.md",
+    "Introduction to Python/Functions.md",
+    "Introduction to Python/Variables and Methods.md",
+    "Notekeeping/Flameshot.png",
     "Introduction to Python/Strings.md",
-    "Introduction to Linux/Common Network Commands.md",
-    "Introduction to Linux/Installing and Updating Tools.md",
-    "Introduction to Linux/Navigating the File System.md",
-    "Introduction to Linux/Viewing, Creating and Editing Files.md",
-    "Introduction to Linux/Users and Privileges.md",
-    "Introduction to Linux/Sudo Overview.md",
-    "Introduction to Linux/Scripting with Bash.md",
-    "Networking/MAC Addresses.md",
-    "Networking/The OSI Model.md"
+    "Introduction to Python/Maths.md"
   ]
 }
