--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Introduction to Python/Advanced Strings.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Introduction to Python/Advanced Strings.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
-    "README.md",
+    "Introduction to Python/Advanced Strings.md",
+    "Introduction to Python/Importing Modules.md",
+    "Introduction to Python/Looping.md",
+    "Introduction to Python/Tuples.md",
     "Introduction to Python/Lists.md",
-    "Introduction to Python/Conditional Statements.md",
-    "Introduction to Python/Relational and Boolean Operators.md",
     "Introduction to Python/Boolean Expressions.md",
+    "Introduction to Python/Conditional Statements.md",
     "Introduction to Python/Functions.md",
-    "Introduction to Python/Variables and Methods.md",
-    "Notekeeping/Flameshot.png",
-    "Introduction to Python/Strings.md",
-    "Introduction to Python/Maths.md"
+    "Introduction to Python/Maths.md",
+    "Introduction to Python/Relational and Boolean Operators.md"
   ]
 }
