--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Information Gathering (Reconnaissance)/Discovering Email Addresses.md",
+            "file": "Information Gathering (Reconnaissance)/Identifying Our Target.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Information Gathering (Reconnaissance)/Discovering Email Addresses.md",
+                "file": "Information Gathering (Reconnaissance)/Identifying Our Target.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +89,8 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
-    "Information Gathering (Reconnaissance)/Discovering Email Addresses.md",
     "Information Gathering (Reconnaissance)/Identifying Our Target.md",
+    "Information Gathering (Reconnaissance)/Discovering Email Addresses.md",
     "Information Gathering (Reconnaissance)/Tools & Techniques/WeLeakInfo.md",
     "Information Gathering (Reconnaissance)/Tools & Techniques/Breach-Parse.md",
     "Information Gathering (Reconnaissance)/Passive Recon.md",
