--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Information Gathering (Reconnaissance)/Discovering Email Addresses/Discovering Email Addresses.md",
+            "file": "README.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -78,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Information Gathering (Reconnaissance)/Discovering Email Addresses/Discovering Email Addresses.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Information Gathering (Reconnaissance)/Discovering Email Addresses/Discovering Email Addresses.md",
+                "file": "README.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -120,6 +120,7 @@
   },
   "active": "f12cee9a1e891ae1",
   "lastOpenFiles": [
+    "README.md",
     "Information Gathering (Reconnaissance)/Discovering Email Addresses/Discovering Email Addresses.md",
     "Information Gathering (Reconnaissance)/Discovering Email Addresses/Tools/hunter.io.md",
     "Introduction to Python/Sockets.md",
@@ -128,7 +129,6 @@
     "Notekeeping/Flameshot.png",
     "Notekeeping/Effective Notekeeping.md",
     "Introduction to Linux/Common Network Commands.md",
-    "Introduction to Python/python-sockets.png",
-    "Information Gathering (Reconnaissance)/Discovering Email Addresses/Tools/Email Checker.md"
+    "Introduction to Python/python-sockets.png"
   ]
 }
