Added breached credentials notes

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "f12cee9a1e891ae1",
+        "id": "361939f01498608a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Information Gathering (Reconnaissance)/Subdomains.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -41,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#FreeThePassword",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -78,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Information Gathering (Reconnaissance)/Subdomains.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "README.md",
+                "file": "Information Gathering (Reconnaissance)/Subdomains.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -116,19 +116,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "f12cee9a1e891ae1",
+  "active": "361939f01498608a",
   "lastOpenFiles": [
-    "README.md",
-    "Information Gathering (Reconnaissance)/Discovering Email Addresses/Discovering Email Addresses.md",
-    "Information Gathering (Reconnaissance)/Discovering Email Addresses/Tools/hunter.io.md",
-    "Introduction to Python/Sockets.md",
-    "Introduction to Python/Port Scanner.md",
-    "Notekeeping/Tools.md",
-    "Notekeeping/Flameshot.png",
-    "Notekeeping/Effective Notekeeping.md",
-    "Introduction to Linux/Common Network Commands.md",
-    "Introduction to Python/python-sockets.png"
+    "Information Gathering (Reconnaissance)/Subdomains.md",
+    "Information Gathering (Reconnaissance)/Tools/Breach-Parse.md",
+    "Information Gathering (Reconnaissance)/Tools/DeHashed.md",
+    "Information Gathering (Reconnaissance)/Breached Credentials.md",
+    "Information Gathering (Reconnaissance)/Tools/Online Hash Crackers.md",
+    "Information Gathering (Reconnaissance)/Tools/Hashes.org.md",
+    "Introduction to Linux/Scripting with Bash.md",
+    "Introduction to Linux/Navigating the File System.md",
+    "Introduction to Linux/Sudo Overview.md",
+    "Information Gathering (Reconnaissance)/Discovering Email Addresses.md"
   ]
 }
