--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,13 +7,8 @@
         "id": "361939f01498608a",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Information Gathering (Reconnaissance)/Subdomains.md",
-            "mode": "source",
-            "backlinks": false,
-            "source": false
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -78,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Information Gathering (Reconnaissance)/Subdomains.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +89,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Information Gathering (Reconnaissance)/Subdomains.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -121,15 +114,15 @@
   },
   "active": "361939f01498608a",
   "lastOpenFiles": [
-    "Information Gathering (Reconnaissance)/Subdomains.md",
     "Information Gathering (Reconnaissance)/Tools/Breach-Parse.md",
+    "Introduction to Python/Sockets.md",
+    "Notekeeping/Tools.md",
+    "Information Gathering (Reconnaissance)/Subdomains.md",
     "Information Gathering (Reconnaissance)/Tools/DeHashed.md",
     "Information Gathering (Reconnaissance)/Breached Credentials.md",
     "Information Gathering (Reconnaissance)/Tools/Online Hash Crackers.md",
     "Information Gathering (Reconnaissance)/Tools/Hashes.org.md",
     "Introduction to Linux/Scripting with Bash.md",
-    "Introduction to Linux/Navigating the File System.md",
-    "Introduction to Linux/Sudo Overview.md",
-    "Information Gathering (Reconnaissance)/Discovering Email Addresses.md"
+    "Introduction to Linux/Navigating the File System.md"
   ]
 }
