Added subdomain and website technology notes

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,13 @@
         "id": "361939f01498608a",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Information Gathering (Reconnaissance)/Identifying Website Technologies.md",
+            "mode": "source",
+            "backlinks": false,
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Information Gathering (Reconnaissance)/Identifying Website Technologies.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "Information Gathering (Reconnaissance)/Identifying Website Technologies.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -114,15 +121,15 @@
   },
   "active": "361939f01498608a",
   "lastOpenFiles": [
-    "Information Gathering (Reconnaissance)/Tools/Breach-Parse.md",
-    "Introduction to Python/Sockets.md",
-    "Notekeeping/Tools.md",
-    "Information Gathering (Reconnaissance)/Subdomains.md",
-    "Information Gathering (Reconnaissance)/Tools/DeHashed.md",
-    "Information Gathering (Reconnaissance)/Breached Credentials.md",
-    "Information Gathering (Reconnaissance)/Tools/Online Hash Crackers.md",
-    "Information Gathering (Reconnaissance)/Tools/Hashes.org.md",
-    "Introduction to Linux/Scripting with Bash.md",
-    "Introduction to Linux/Navigating the File System.md"
+    "Information Gathering (Reconnaissance)/Identifying Website Technologies.md",
+    "Information Gathering (Reconnaissance)/Hunting Subdomains.md",
+    "Information Gathering (Reconnaissance)/Tools/BuiltWith.md",
+    "Information Gathering (Reconnaissance)/Tools/crt.sh.md",
+    "Information Gathering (Reconnaissance)/Tools/HTTProbe.md",
+    "Information Gathering (Reconnaissance)/Tools/OWASP Amass.md",
+    "Information Gathering (Reconnaissance)/Tools/Sublist3r.md",
+    "Information Gathering (Reconnaissance)/Tools/Wappalyzer.md",
+    "Information Gathering (Reconnaissance)/Tools/WhatWeb.md",
+    "Information Gathering (Reconnaissance)/Breached Credentials.md"
   ]
 }
