--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,13 @@
         "id": "361939f01498608a",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Information Gathering (Reconnaissance)/Google Fu.md",
+            "mode": "source",
+            "backlinks": false,
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Information Gathering (Reconnaissance)/Google Fu.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "Information Gathering (Reconnaissance)/Google Fu.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -114,10 +121,10 @@
   },
   "active": "361939f01498608a",
   "lastOpenFiles": [
+    "Information Gathering (Reconnaissance)/Google Fu.md",
     "Information Gathering (Reconnaissance)/Passive Recon.md",
     "Information Gathering (Reconnaissance)/Discovering Email Addresses.md",
     "Information Gathering (Reconnaissance)/Utilising Social Media.md",
-    "Information Gathering (Reconnaissance)/Google Fu.md",
     "Information Gathering (Reconnaissance)/Information Gathering with Burp Suite.md",
     "Information Gathering (Reconnaissance)/Tools/Burp Suite.md",
     "Information Gathering (Reconnaissance)/Tools/Online Hash Crackers.md",
